Start working on some of the component layouts

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,8 @@
-<p>shopping-list works!</p>
+<div>
+  <p class="font-bold">shopping-list works!</p>
+  <div>
+    <app-shopping-list-edit></app-shopping-list-edit>
+    <hr>
+    <p>The list</p>
+  </div>
+</div>
