--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header>
-
-</app-header>
+<app-header></app-header>
+<div class="container mx-auto">
+  <div class="flex flex-col space-y-8">
+    <app-recipes></app-recipes>
+    <app-shopping-list></app-shopping-list>
+  </div>
+</div>
