--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,1 +1,9 @@
-<p>recipes-list works!</p>
+<div>
+  <p class="font-bold">recipes-list works!</p>
+  <div>
+    <app-recipe-item></app-recipe-item>
+    <app-recipe-item></app-recipe-item>
+    <app-recipe-item></app-recipe-item>
+  </div>
+
+</div>
