--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,1 +1,8 @@
-<p>recipes works!</p>
+<div class="grid grid-cols-2">
+ <div>
+   <app-recipes-list></app-recipes-list>
+ </div>
+  <div>
+    <app-recipe-detail></app-recipe-detail>
+  </div>
+</div>
