--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
-<div class="container mx-auto">
+<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <div class="flex flex-col space-y-8">
+    <app-welcome></app-welcome>
     <app-recipes></app-recipes>
     <app-shopping-list></app-shopping-list>
   </div>
