--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,6 +1,6 @@
-<div>
-  <p class="font-bold">recipes-list works!</p>
-  <div>
+<div class="flex flex-col space-y-8">
+  <h1 class="font-bold text-3xl text-white">Recipes</h1>
+  <div class="flex space-x-4">
     <app-recipe-item></app-recipe-item>
     <app-recipe-item></app-recipe-item>
     <app-recipe-item></app-recipe-item>
