--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,6 @@
 <div>
-  <p class="font-bold">shopping-list works!</p>
+  <h1 class="font-bold text-3xl text-white my-4">Shopping list</h1>
   <div>
     <app-shopping-list-edit></app-shopping-list-edit>
-    <hr>
-    <p>The list</p>
   </div>
 </div>
